simulator/src/grammar/AsmY86Parser.java
// $ANTLR !Unknown version! grammar/AsmY86.g 2011-08-25 13:22:55

package grammar;

import isa.Memory;
import isa.MemoryCell;
import isa.Instruction;
import isa.Datum;
import arch.y86.isa.Assembler;
import arch.y86.machine.AbstractY86CPU;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class AsmY86Parser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "NewLine", "Comment", "Identifier", "Hex", "Decimal", "Character", "Digit", "HexDigit", "WS", "':'", "'halt'", "'nop'", "'rrmovl'", "'cmovle'", "'cmovl'", "'cmove'", "'cmovne'", "'cmovge'", "'cmovg'", "'irmovl'", "'rmmovl'", "'mrmovl'", "'addl'", "'subl'", "'andl'", "'xorl'", "'mull'", "'divl'", "'modl'", "'iaddl'", "'isubl'", "'iandl'", "'ixorl'", "'imull'", "'idivl'", "'imodl'", "'jmp'", "'jle'", "'jl'", "'je'", "'jne'", "'jge'", "'jg'", "'call'", "'pushl'", "'popl'", "'leave'", "','", "'*'", "'ret'", "'$'", "'('", "')'", "'%eax'", "'%ecx'", "'%edx'", "'%ebx'", "'%esp'", "'%ebp'", "'%esi'", "'%edi'", "'-'", "'.pos'", "'.long'", "'.word'", "'.byte'", "'.align'"
    };
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__64=64;
    public static final int T__29=29;
    public static final int T__65=65;
    public static final int T__28=28;
    public static final int T__62=62;
    public static final int T__27=27;
    public static final int T__63=63;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int Decimal=8;
    public static final int T__61=61;
    public static final int T__60=60;
    public static final int EOF=-1;
    public static final int HexDigit=11;
    public static final int Identifier=6;
    public static final int T__55=55;
    public static final int NewLine=4;
    public static final int T__56=56;
    public static final int T__19=19;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__16=16;
    public static final int T__51=51;
    public static final int T__15=15;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__18=18;
    public static final int T__54=54;
    public static final int T__17=17;
    public static final int Comment=5;
    public static final int T__14=14;
    public static final int T__13=13;
    public static final int T__59=59;
    public static final int T__50=50;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int Digit=10;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int WS=12;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__70=70;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int Character=9;
    public static final int Hex=7;

    // delegates
    // delegators


        public AsmY86Parser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public AsmY86Parser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return AsmY86Parser.tokenNames; }
    public String getGrammarFileName() { return "grammar/AsmY86.g"; }


    public enum LineType {INSTRUCTION, DATA, NULL};
    Memory memory;
    LineType lineType;
    int pc;
    int opCode;
    int[] op = new int[4];
    int opLength;
    String label;
    String comment;
    int dataSize;
    int dataValue;
    int dataCount;
    int pass;

    void init (Memory aMemory, int startingAddress) {
      memory      = aMemory;
      pc          = startingAddress;
      lineType    = LineType.NULL;
      comment     = "";
      label       = "";
    }

    public void checkSyntax (Memory aMemory, int startingAddress) throws Assembler.AssemblyException {
      init (aMemory, startingAddress);
      pass = 0;
      try {
        program ();
      } catch (RecognitionException e) {
        throw new Assembler.AssemblyException ("");
      }
    }

    public void passOne (Memory aMemory, int startingAddress) throws Assembler.AssemblyException {
      init (aMemory, startingAddress);
      pass = 1;
      try {
        program ();
      } catch (RecognitionException e) {
        throw new Assembler.AssemblyException ("");
      }
    }

    public void passTwo (Memory aMemory, int startingAddress) throws Assembler.AssemblyException {
      init (aMemory, startingAddress);
      pass = 2;
      try {
        program ();
      } catch (RecognitionException e) {
        throw new Assembler.AssemblyException ("");
      }
    }

    @Override
    public void emitErrorMessage(String msg) {
      throw new Assembler.AssemblyException (msg);
    }

    int getLabelValue (String label) {
      Integer value = memory.getLabelMap ().getAddress (label);
      if (value==null) {
        if (pass==1)
          value = pc;
        else
          emitErrorMessage (String.format ("Label not found: %s at address %d", label, pc));
      }
      return value.intValue ();
    }

    void writeLine () throws RecognitionException {
      MemoryCell cell = null;
      switch (lineType) {
        case INSTRUCTION:
          try {
            cell = Instruction.valueOf (memory, pc, opCode, op, label, comment);
            if (cell==null)
              throw new RecognitionException ();
            if (pass==1 && !label.trim ().equals ("")) 
              memory.addLabelOnly (cell);
            else if (pass==2)
              memory.add (cell);
            label = "";
            comment = "";
            pc += cell.length ();
          } catch (IndexOutOfBoundsException e) {
            throw new RecognitionException ();
          }
          break;
        case DATA:
          for (int i=0; i<dataCount; i++) {
            cell = Datum.valueOf (memory, pc, dataValue, dataSize, label, comment);
            if (cell==null)
              throw new RecognitionException ();
            if (pass==1 && !label.trim ().equals (""))
              memory.addLabelOnly (cell);
            else if (pass==2)
              memory.add (cell);
            label = "";
            comment = "";
            pc += dataSize;
          }
          label = "";
          comment = "";
          break;
        default:
      }
      lineType = LineType.NULL;
      op[0]=0;
      op[1]=0;
      op[2]=0;
      op[3]=0;
    }



    // $ANTLR start "program"
    // grammar/AsmY86.g:144:1: program : ( line )* EOF ;
    public final void program() throws RecognitionException {
        try {
            // grammar/AsmY86.g:144:9: ( ( line )* EOF )
            // grammar/AsmY86.g:144:11: ( line )* EOF
            {
            // grammar/AsmY86.g:144:11: ( line )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=NewLine && LA1_0<=Identifier)||(LA1_0>=14 && LA1_0<=50)||LA1_0==53||(LA1_0>=66 && LA1_0<=70)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // grammar/AsmY86.g:144:11: line
            	    {
            	    pushFollow(FOLLOW_line_in_program46);
            	    line();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            match(input,EOF,FOLLOW_EOF_in_program49); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "program"


    // $ANTLR start "line"
    // grammar/AsmY86.g:146:1: line : ( labelDeclaration )? ( instruction | directive )? ( NewLine | ( Comment ) ) ;
    public final void line() throws RecognitionException {
        Token Comment1=null;

        try {
            // grammar/AsmY86.g:146:6: ( ( labelDeclaration )? ( instruction | directive )? ( NewLine | ( Comment ) ) )
            // grammar/AsmY86.g:146:8: ( labelDeclaration )? ( instruction | directive )? ( NewLine | ( Comment ) )
            {
            // grammar/AsmY86.g:146:8: ( labelDeclaration )?
            int alt2=2;
            alt2 = dfa2.predict(input);
            switch (alt2) {
                case 1 :
                    // grammar/AsmY86.g:146:9: labelDeclaration
                    {
                    pushFollow(FOLLOW_labelDeclaration_in_line58);
                    labelDeclaration();

                    state._fsp--;


                    }
                    break;

            }

            // grammar/AsmY86.g:146:28: ( instruction | directive )?
            int alt3=3;
            int LA3_0 = input.LA(1);

            if ( ((LA3_0>=14 && LA3_0<=50)||LA3_0==53) ) {
                alt3=1;
            }
            else if ( ((LA3_0>=66 && LA3_0<=70)) ) {
                alt3=2;
            }
            switch (alt3) {
                case 1 :
                    // grammar/AsmY86.g:146:30: instruction
                    {
                    pushFollow(FOLLOW_instruction_in_line64);
                    instruction();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // grammar/AsmY86.g:146:44: directive
                    {
                    pushFollow(FOLLOW_directive_in_line68);
                    directive();

                    state._fsp--;


                    }
                    break;

            }

            // grammar/AsmY86.g:146:57: ( NewLine | ( Comment ) )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==NewLine) ) {
                alt4=1;
            }
            else if ( (LA4_0==Comment) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // grammar/AsmY86.g:146:59: NewLine
                    {
                    match(input,NewLine,FOLLOW_NewLine_in_line75); 

                    }
                    break;
                case 2 :
                    // grammar/AsmY86.g:146:69: ( Comment )
                    {
                    // grammar/AsmY86.g:146:69: ( Comment )
                    // grammar/AsmY86.g:146:70: Comment
                    {
                    Comment1=(Token)match(input,Comment,FOLLOW_Comment_in_line80); 
                     comment = (Comment1!=null?Comment1.getText():null).substring(1).trim(); 

                    }


                    }
                    break;

            }

            writeLine ();

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "line"

    public static class labelDeclaration_return extends ParserRuleReturnScope {
    };

    // $ANTLR start "labelDeclaration"
    // grammar/AsmY86.g:149:1: labelDeclaration : ( Identifier | operand ) ':' ;
    public final AsmY86Parser.labelDeclaration_return labelDeclaration() throws RecognitionException {
        AsmY86Parser.labelDeclaration_return retval = new AsmY86Parser.labelDeclaration_return();
        retval.start = input.LT(1);

        try {
            // grammar/AsmY86.g:150:2: ( ( Identifier | operand ) ':' )
            // grammar/AsmY86.g:150:4: ( Identifier | operand ) ':'
            {
            // grammar/AsmY86.g:150:4: ( Identifier | operand )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==Identifier) ) {
                alt5=1;
            }
            else if ( ((LA5_0>=14 && LA5_0<=50)) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // grammar/AsmY86.g:150:5: Identifier
                    {
                    match(input,Identifier,FOLLOW_Identifier_in_labelDeclaration100); 

                    }
                    break;
                case 2 :
                    // grammar/AsmY86.g:150:18: operand
                    {
                    pushFollow(FOLLOW_operand_in_labelDeclaration104);
                    operand();

                    state._fsp--;


                    }
                    break;

            }

            match(input,13,FOLLOW_13_in_labelDeclaration107); 
            label = input.toString(retval.start,input.LT(-1)).substring (0, input.toString(retval.start,input.LT(-1)).length ()-1);

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "labelDeclaration"

    public static class label_return extends ParserRuleReturnScope {
        public int value;
    };

    // $ANTLR start "label"
    // grammar/AsmY86.g:151:1: label returns [int value] : ( Identifier | operand ) ;
    public final AsmY86Parser.label_return label() throws RecognitionException {
        AsmY86Parser.label_return retval = new AsmY86Parser.label_return();
        retval.start = input.LT(1);

        try {
            // grammar/AsmY86.g:152:2: ( ( Identifier | operand ) )
            // grammar/AsmY86.g:152:4: ( Identifier | operand )
            {
            // grammar/AsmY86.g:152:4: ( Identifier | operand )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==Identifier) ) {
                alt6=1;
            }
            else if ( ((LA6_0>=14 && LA6_0<=50)) ) {
                alt6=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // grammar/AsmY86.g:152:5: Identifier
                    {
                    match(input,Identifier,FOLLOW_Identifier_in_label122); 

                    }
                    break;
                case 2 :
                    // grammar/AsmY86.g:152:18: operand
                    {
                    pushFollow(FOLLOW_operand_in_label126);
                    operand();

                    state._fsp--;


                    }
                    break;

            }

            retval.value = getLabelValue (input.toString(retval.start,input.LT(-1)));

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "label"


    // $ANTLR start "instruction"
    // grammar/AsmY86.g:155:1: instruction : ( nop | halt | rrmovxx | irmovl | rmmovl | mrmovl | opl | jxx | call | ret | pushl | popl | iopl | leave | jmp ) ;
    public final void instruction() throws RecognitionException {
        try {
            // grammar/AsmY86.g:156:2: ( ( nop | halt | rrmovxx | irmovl | rmmovl | mrmovl | opl | jxx | call | ret | pushl | popl | iopl | leave | jmp ) )
            // grammar/AsmY86.g:156:4: ( nop | halt | rrmovxx | irmovl | rmmovl | mrmovl | opl | jxx | call | ret | pushl | popl | iopl | leave | jmp )
            {
            // grammar/AsmY86.g:156:4: ( nop | halt | rrmovxx | irmovl | rmmovl | mrmovl | opl | jxx | call | ret | pushl | popl | iopl | leave | jmp )
            int alt7=15;
            alt7 = dfa7.predict(input);
            switch (alt7) {
                case 1 :
                    // grammar/AsmY86.g:156:5: nop
                    {
                    pushFollow(FOLLOW_nop_in_instruction140);
                    nop();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // grammar/AsmY86.g:156:11: halt
                    {
                    pushFollow(FOLLOW_halt_in_instruction144);
                    halt();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // grammar/AsmY86.g:156:18: rrmovxx
                    {
                    pushFollow(FOLLOW_rrmovxx_in_instruction148);
                    rrmovxx();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    // grammar/AsmY86.g:156:28: irmovl
                    {
                    pushFollow(FOLLOW_irmovl_in_instruction152);
                    irmovl();

                    state._fsp--;


                    }
                    break;
                case 5 :
                    // grammar/AsmY86.g:156:37: rmmovl
                    {
                    pushFollow(FOLLOW_rmmovl_in_instruction156);
                    rmmovl();

                    state._fsp--;


                    }
                    break;
                case 6 :
                    // grammar/AsmY86.g:156:46: mrmovl
                    {
                    pushFollow(FOLLOW_mrmovl_in_instruction160);
                    mrmovl();

                    state._fsp--;


                    }
                    break;
                case 7 :
                    // grammar/AsmY86.g:156:55: opl
                    {
                    pushFollow(FOLLOW_opl_in_instruction164);
                    opl();

                    state._fsp--;


                    }
                    break;
                case 8 :
                    // grammar/AsmY86.g:156:61: jxx
                    {
                    pushFollow(FOLLOW_jxx_in_instruction168);
                    jxx();

                    state._fsp--;


                    }
                    break;
                case 9 :
                    // grammar/AsmY86.g:156:67: call
                    {
                    pushFollow(FOLLOW_call_in_instruction172);
                    call();

                    state._fsp--;


                    }
                    break;
                case 10 :
                    // grammar/AsmY86.g:156:74: ret
                    {
                    pushFollow(FOLLOW_ret_in_instruction176);
                    ret();

                    state._fsp--;


                    }
                    break;
                case 11 :
                    // grammar/AsmY86.g:156:80: pushl
                    {
                    pushFollow(FOLLOW_pushl_in_instruction180);
                    pushl();

                    state._fsp--;


                    }
                    break;
                case 12 :
                    // grammar/AsmY86.g:156:88: popl
                    {
                    pushFollow(FOLLOW_popl_in_instruction184);
                    popl();

                    state._fsp--;


                    }
                    break;
                case 13 :
                    // grammar/AsmY86.g:156:95: iopl
                    {
                    pushFollow(FOLLOW_iopl_in_instruction188);
                    iopl();

                    state._fsp--;


                    }
                    break;
                case 14 :
                    // grammar/AsmY86.g:156:102: leave
                    {
                    pushFollow(FOLLOW_leave_in_instruction192);
                    leave();

                    state._fsp--;


                    }
                    break;
                case 15 :
                    // grammar/AsmY86.g:156:110: jmp
                    {
                    pushFollow(FOLLOW_jmp_in_instruction196);
                    jmp();

                    state._fsp--;


                    }
                    break;

            }

            lineType = LineType.INSTRUCTION;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "instruction"


    // $ANTLR start "operand"
    // grammar/AsmY86.g:158:1: operand : ( 'halt' | 'nop' | 'rrmovl' | 'cmovle' | 'cmovl' | 'cmove' | 'cmovne' | 'cmovge' | 'cmovg' | 'irmovl' | 'rmmovl' | 'mrmovl' | 'addl' | 'subl' | 'andl' | 'xorl' | 'mull' | 'divl' | 'modl' | 'iaddl' | 'isubl' | 'iandl' | 'ixorl' | 'imull' | 'idivl' | 'imodl' | 'jmp' | 'jle' | 'jl' | 'je' | 'jne' | 'jge' | 'jg' | 'call' | 'pushl' | 'popl' | 'leave' ) ;
    public final void operand() throws RecognitionException {
        try {
            // grammar/AsmY86.g:158:9: ( ( 'halt' | 'nop' | 'rrmovl' | 'cmovle' | 'cmovl' | 'cmove' | 'cmovne' | 'cmovge' | 'cmovg' | 'irmovl' | 'rmmovl' | 'mrmovl' | 'addl' | 'subl' | 'andl' | 'xorl' | 'mull' | 'divl' | 'modl' | 'iaddl' | 'isubl' | 'iandl' | 'ixorl' | 'imull' | 'idivl' | 'imodl' | 'jmp' | 'jle' | 'jl' | 'je' | 'jne' | 'jge' | 'jg' | 'call' | 'pushl' | 'popl' | 'leave' ) )
            // grammar/AsmY86.g:158:11: ( 'halt' | 'nop' | 'rrmovl' | 'cmovle' | 'cmovl' | 'cmove' | 'cmovne' | 'cmovge' | 'cmovg' | 'irmovl' | 'rmmovl' | 'mrmovl' | 'addl' | 'subl' | 'andl' | 'xorl' | 'mull' | 'divl' | 'modl' | 'iaddl' | 'isubl' | 'iandl' | 'ixorl' | 'imull' | 'idivl' | 'imodl' | 'jmp' | 'jle' | 'jl' | 'je' | 'jne' | 'jge' | 'jg' | 'call' | 'pushl' | 'popl' | 'leave' )
            {
            if ( (input.LA(1)>=14 && input.LA(1)<=50) ) {
                input.consume();
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "operand"


    // $ANTLR start "halt"
    // grammar/AsmY86.g:163:1: halt : 'halt' ;
    public final void halt() throws RecognitionException {
        try {
            // grammar/AsmY86.g:163:6: ( 'halt' )
            // grammar/AsmY86.g:163:8: 'halt'
            {
            match(input,14,FOLLOW_14_in_halt379); 
            opCode = 0x00;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "halt"


    // $ANTLR start "nop"
    // grammar/AsmY86.g:164:1: nop : 'nop' ;
    public final void nop() throws RecognitionException {
        try {
            // grammar/AsmY86.g:164:5: ( 'nop' )
            // grammar/AsmY86.g:164:7: 'nop'
            {
            match(input,15,FOLLOW_15_in_nop388); 
            opCode = 0x10;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "nop"


    // $ANTLR start "rrmovxx"
    // grammar/AsmY86.g:165:1: rrmovxx : ( 'rrmovl' | 'cmovle' | 'cmovl' | 'cmove' | 'cmovne' | 'cmovge' | 'cmovg' ) src= register ',' dst= register ;
    public final void rrmovxx() throws RecognitionException {
        int src = 0;

        int dst = 0;


        try {
            // grammar/AsmY86.g:165:9: ( ( 'rrmovl' | 'cmovle' | 'cmovl' | 'cmove' | 'cmovne' | 'cmovge' | 'cmovg' ) src= register ',' dst= register )
            // grammar/AsmY86.g:165:11: ( 'rrmovl' | 'cmovle' | 'cmovl' | 'cmove' | 'cmovne' | 'cmovge' | 'cmovg' ) src= register ',' dst= register
            {
            // grammar/AsmY86.g:165:11: ( 'rrmovl' | 'cmovle' | 'cmovl' | 'cmove' | 'cmovne' | 'cmovge' | 'cmovg' )
            int alt8=7;
            switch ( input.LA(1) ) {
            case 16:
                {
                alt8=1;
                }
                break;
            case 17:
                {
                alt8=2;
                }
                break;
            case 18:
                {
                alt8=3;
                }
                break;
            case 19:
                {
                alt8=4;
                }
                break;
            case 20:
                {
                alt8=5;
                }
                break;
            case 21:
                {
                alt8=6;
                }
                break;
            case 22:
                {
                alt8=7;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;
            }

            switch (alt8) {
                case 1 :
                    // grammar/AsmY86.g:165:12: 'rrmovl'
                    {
                    match(input,16,FOLLOW_16_in_rrmovxx398); 
                    opCode=0x20;

                    }
                    break;
                case 2 :
                    // grammar/AsmY86.g:165:38: 'cmovle'
                    {
                    match(input,17,FOLLOW_17_in_rrmovxx404); 
                    opCode=0x21;

                    }
                    break;
                case 3 :
                    // grammar/AsmY86.g:165:64: 'cmovl'
                    {
                    match(input,18,FOLLOW_18_in_rrmovxx410); 
                    opCode=0x22;
